--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,13 +15,11 @@
     "@openai/agents": "^0.1.3",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
-    "imap": "^0.8.19",
-    "imap-simple": "^5.1.0",
+    "imap-simple": "^1.6.3",
     "mailparser": "^3.7.4",
-    "node-telegram-bot-api": "^0.66.0",
+    "node-telegram-bot-api": "^0.63.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "twilio": "^5.10.0",
     "typescript": "^5.9.2",
     "zod": "^3.25.76"
   },
