--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-OPENAI_API_KEY=
-TOKEN=
-CHATID=
-EMAIL_USER=
-EMAIL_PASS=
+OPENAI_API_KEY=YOUR_API_KEY_HERE
+TOKEN=YOUR_TELEGRAM_BOT_TOKEN_HERE
+CHATID=YOUR_TELEGRAM_CHAT_USER_ID_HERE
+EMAIL_USER=YOUR_EMAIL_HERE
+EMAIL_PASS=YOUR_EMAIL_PASSWORD_HERE
