--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/google": "^2.0.16",
     "@openai/agents": "^0.1.3",
+    "@openai/agents-extensions": "^0.1.2",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "imap-simple": "^1.6.3",
