feat: switch to groq api
- more generous limits suitable for our use case
- 60 RPM, 1000 RPD (enough for mails), 32 billion parameter model

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ai-sdk/google": "^2.0.16",
+    "@ai-sdk/groq": "^2.0.22",
     "@openai/agents": "^0.1.3",
     "@openai/agents-extensions": "^0.1.2",
     "axios": "^1.12.2",
