--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@ai-sdk/groq": "^2.0.22",
+    "@google-cloud/local-auth": "2.1.0",
     "@openai/agents": "^0.1.3",
     "@openai/agents-extensions": "^0.1.2",
+    "@types/mailparser": "^3.4.6",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
+    "googleapis": "105",
     "imap-simple": "^1.6.3",
     "mailparser": "^3.7.4",
     "node-telegram-bot-api": "^0.63.0",
